# Solver_Study

./: .gitignore  README.md
Models/amici_import/Bungay2006a/Bungay2006a/: Bungay2006a.h  Bungay2006a_J.cpp  Bungay2006a_JDiag.cpp  Bungay2006a_JSparse.cpp  Bungay2006a_JSparseB.cpp  Bungay2006a_JSparseB_rowvals.cpp  Bungay2006a_JSparse_colptrs.cpp  Bungay2006a_dJydsigmay.cpp  Bungay2006a_dJydy_colptrs.cpp  Bungay2006a_dJydy_rowvals.cpp  Bungay2006a_dsigmaydp.cpp  Bungay2006a_dwdx_colptrs.cpp  Bungay2006a_dxdotdp.cpp  Bungay2006a_dxdotdw_rowvals.cpp  Bungay2006a_dydp.cpp  Bungay2006a_sigmay.cpp  Bungay2006a_sx0.cpp  Bungay2006a_sx0_fixedParameters.cpp  Bungay2006a_total_cl.cpp  Bungay2006a_x0.cpp  Bungay2006a_x0_fixedParameters.cpp  Bungay2006a_x_rdata.cpp  Bungay2006a_xdot.cpp  CMakeLists.txt  JSparse.h  my.h  wrapfunctions.cpp  x_rdata.h
Models/amici_import/Holzhutter2004/Holzhutter2004/: CMakeLists.txt  Holzhutter2004_JB.cpp  Holzhutter2004_JDiag.cpp  Holzhutter2004_JSparseB.cpp  Holzhutter2004_JSparse_colptrs.cpp  Holzhutter2004_JSparse_rowvals.cpp  Holzhutter2004_Jy.cpp  Holzhutter2004_dJydsigmay.cpp  Holzhutter2004_dJydy.cpp  Holzhutter2004_dsigmaydp.cpp  Holzhutter2004_dxdotdw_rowvals.cpp  Holzhutter2004_dydp.cpp  Holzhutter2004_sigmay.cpp  Holzhutter2004_x0.cpp  Holzhutter2004_x0_fixedParameters.cpp  Holzhutter2004_x_solver.cpp  Holzhutter2004_xdot.cpp  compileMexFile.m  dJydy.h  dwdx.h  my.h  w.h  wrapfunctions.cpp  x.h  x_rdata.h
Models/amici_import/Levchenko2000a/Levchenko2000a/: CMakeLists.txt  JSparseB.h  Levchenko2000a_JB.cpp  Levchenko2000a_JSparse.cpp  Levchenko2000a_JSparseB_rowvals.cpp  Levchenko2000a_JSparse_colptrs.cpp  Levchenko2000a_Jy.cpp  Levchenko2000a_dJydsigmay.cpp  Levchenko2000a_dJydy_colptrs.cpp  Levchenko2000a_dwdx_colptrs.cpp  Levchenko2000a_dwdx_rowvals.cpp  Levchenko2000a_dxdotdp.cpp  Levchenko2000a_dxdotdw_colptrs.cpp  Levchenko2000a_dxdotdw_rowvals.cpp  Levchenko2000a_sx0.cpp  Levchenko2000a_sx0_fixedParameters.cpp  Levchenko2000a_w.cpp  Levchenko2000a_x0.cpp  Levchenko2000a_x_solver.cpp  Levchenko2000a_xdot.cpp  Levchenko2000a_y.cpp  dwdp.h  dxdotdw.h  my.h  p.h  sigmay.h  w.h  wrapfunctions.cpp  wrapfunctions.h  y.h
Models/amici_import/Ouzounoglou2014/Ouzounoglou2014/: CMakeLists.txt  JSparseB.h  Ouzounoglou2014.h  Ouzounoglou2014_J.cpp  Ouzounoglou2014_JB.cpp  Ouzounoglou2014_JSparse.cpp  Ouzounoglou2014_JSparseB.cpp  Ouzounoglou2014_JSparseB_rowvals.cpp  Ouzounoglou2014_JSparse_rowvals.cpp  Ouzounoglou2014_dJydy_colptrs.cpp  Ouzounoglou2014_dJydy_rowvals.cpp  Ouzounoglou2014_dsigmaydp.cpp  Ouzounoglou2014_dwdp.cpp  Ouzounoglou2014_dwdx.cpp  Ouzounoglou2014_dwdx_colptrs.cpp  Ouzounoglou2014_dxdotdw.cpp  Ouzounoglou2014_dydp.cpp  Ouzounoglou2014_dydx.cpp  Ouzounoglou2014_sx0.cpp  Ouzounoglou2014_w.cpp  compileMexFile.m  dJydy.h  setup.py  sigmay.h  w.h  wrapfunctions.h  x.h  y.h
Models/amici_import/Sivakumar2011c/Sivakumar2011c/: CMakeLists.txt  JSparseB.h  Sivakumar2011c.h  Sivakumar2011c_J.cpp  Sivakumar2011c_JSparse.cpp  Sivakumar2011c_JSparseB_rowvals.cpp  Sivakumar2011c_JSparse_rowvals.cpp  Sivakumar2011c_Jy.cpp  Sivakumar2011c_dJydsigmay.cpp  Sivakumar2011c_dJydy.cpp  Sivakumar2011c_dJydy_colptrs.cpp  Sivakumar2011c_dwdx.cpp  Sivakumar2011c_dwdx_colptrs.cpp  Sivakumar2011c_dwdx_rowvals.cpp  Sivakumar2011c_dxdotdp.cpp  Sivakumar2011c_dxdotdw.cpp  Sivakumar2011c_sigmay.cpp  Sivakumar2011c_sx0_fixedParameters.cpp  Sivakumar2011c_total_cl.cpp  Sivakumar2011c_w.cpp  Sivakumar2011c_x0_fixedParameters.cpp  Sivakumar2011c_xdot.cpp  Sivakumar2011c_y.cpp  p.h  wrapfunctions.cpp  wrapfunctions.h  x.h  x_rdata.h
Models/amici_import/alexander2010_fig2-user/model1_alexander1/: CMakeLists.txt  model1_alexander1.h  model1_alexander1_J.cpp  model1_alexander1_JSparseB_colptrs.cpp  model1_alexander1_Jy.cpp  model1_alexander1_dJydsigmay.cpp  model1_alexander1_dJydy.cpp  model1_alexander1_dJydy_colptrs.cpp  model1_alexander1_dJydy_rowvals.cpp  model1_alexander1_dsigmaydp.cpp  model1_alexander1_dwdx.cpp  model1_alexander1_dwdx_rowvals.cpp  model1_alexander1_dxdotdw_rowvals.cpp  model1_alexander1_dydp.cpp  model1_alexander1_dydx.cpp  model1_alexander1_sigmay.cpp  model1_alexander1_sx0.cpp  model1_alexander1_total_cl.cpp  model1_alexander1_x_rdata.cpp  model1_alexander1_x_solver.cpp  model1_alexander1_y.cpp  p.h  w.h  x_rdata.h
Models/amici_import/hernandezvargas2013/model0_esteban2013/: CMakeLists.txt  model0_esteban2013.h  model0_esteban2013_J.cpp  model0_esteban2013_JDiag.cpp  model0_esteban2013_JSparseB.cpp  model0_esteban2013_JSparseB_rowvals.cpp  model0_esteban2013_JSparse_colptrs.cpp  model0_esteban2013_JSparse_rowvals.cpp  model0_esteban2013_Jy.cpp  model0_esteban2013_dJydsigmay.cpp  model0_esteban2013_dJydy.cpp  model0_esteban2013_dJydy_colptrs.cpp  model0_esteban2013_dsigmaydp.cpp  model0_esteban2013_dwdx.cpp  model0_esteban2013_dwdx_colptrs.cpp  model0_esteban2013_dwdx_rowvals.cpp  model0_esteban2013_dxdotdw_colptrs.cpp  model0_esteban2013_dydx.cpp  model0_esteban2013_sigmay.cpp  model0_esteban2013_sx0_fixedParameters.cpp  model0_esteban2013_x0.cpp  model0_esteban2013_x0_fixedParameters.cpp  model0_esteban2013_xdot.cpp  model0_esteban2013_y.cpp  setup.py  wrapfunctions.h  x.h  x_rdata.h
Models/amici_import/kolodkin2010_figure2b/kolodkin3/: CMakeLists.txt  compileMexFile.m  kolodkin3_JB.cpp  kolodkin3_JSparseB.cpp  kolodkin3_JSparseB_rowvals.cpp  kolodkin3_JSparse_rowvals.cpp  kolodkin3_dJydsigmay.cpp  kolodkin3_dwdp.cpp  kolodkin3_dxdotdp.cpp  kolodkin3_dxdotdw.cpp  kolodkin3_dxdotdw_colptrs.cpp  kolodkin3_dxdotdw_rowvals.cpp  kolodkin3_sigmay.cpp  kolodkin3_sx0.cpp  kolodkin3_sx0_fixedParameters.cpp  kolodkin3_total_cl.cpp  kolodkin3_w.cpp  kolodkin3_x0.cpp  kolodkin3_x0_fixedParameters.cpp  kolodkin3_x_solver.cpp  kolodkin3_xdot.cpp  p.h  wrapfunctions.cpp  x_rdata.h
Models/amici_import/vanheerden2014_fig4-user/model2_/: CMakeLists.txt  model2_.h  model2__J.cpp  model2__JB.cpp  model2__JSparse.cpp  model2__JSparseB_colptrs.cpp  model2__JSparseB_rowvals.cpp  model2__JSparse_colptrs.cpp  model2__JSparse_rowvals.cpp  model2__Jy.cpp  (+16 more)
(+32377 files in other folders)
